force-app/main/default/objects/SAP_StockSnapshots__x/SAP_StockSnapshots__x.object-meta.xml
<CustomObject>
    <description>SAP_StockSnapshotsSet</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SAP_StockSnapshotsSet</externalName>
    <label>SAP_StockSnapshots</label>
    <pluralLabel>SAP_StockSnapshotsSet</pluralLabel>
</CustomObject>