force-app/main/default/objects/SAP_StockSnapshots__x/fields/AvailableStock__c.field-meta.xml
<CustomField>
    <fullName>AvailableStock__c</fullName>
    <description>StkDispo</description>
    <externalDeveloperName>StkDispo</externalDeveloperName>
    <label>Available Stock</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>