force-app/main/default/objects/SAP_StockSnapshots__x/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description>ChargLote</description>
    <externalDeveloperName>Charg</externalDeveloperName>
    <label>Batch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>