force-app/main/default/objects/SAP_StockSnapshots__x/fields/BlockedStock__c.field-meta.xml
<CustomField>
    <fullName>BlockedStock__c</fullName>
    <description>StkBloq</description>
    <externalDeveloperName>StkBloq</externalDeveloperName>
    <label>Blocked Stock</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>