force-app/main/default/objects/SAP_StockSnapshots__x/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Fecha</description>
    <externalDeveloperName>Fecha</externalDeveloperName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>