force-app/main/default/objects/SAP_StockSnapshots__x/fields/InTransitStock__c.field-meta.xml
<CustomField>
    <fullName>InTransitStock__c</fullName>
    <description>StkTrans</description>
    <externalDeveloperName>StkTrans</externalDeveloperName>
    <label>In Transit Stock</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>