force-app/main/default/objects/SAP_StockSnapshots__x/fields/OnHandStock__c.field-meta.xml
<CustomField>
    <fullName>OnHandStock__c</fullName>
    <description>Stock físico (bloqueado + reservado + disponible)</description>
    <externalDeveloperName>StkReal</externalDeveloperName>
    <label>On-hand Stock</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>