force-app/main/default/objects/SAP_StockSnapshots__x/fields/ReservedStock__c.field-meta.xml
<CustomField>
    <fullName>ReservedStock__c</fullName>
    <description>StkRes</description>
    <externalDeveloperName>StkRes</externalDeveloperName>
    <label>Reserved Stock</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>