force-app/main/default/objects/SAP_StockSnapshots__x/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <description>Matnr</description>
    <externalDeveloperName>Matnr</externalDeveloperName>
    <label>Stock Keeping Unit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>