force-app/main/default/objects/SAP_StockSnapshots__x/fields/StockUnit__c.field-meta.xml
<CustomField>
    <fullName>StockUnit__c</fullName>
    <description>Meins</description>
    <externalDeveloperName>Meins</externalDeveloperName>
    <label>Stock Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>