force-app/main/default/objects/SAP_StockSnapshots__x/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Hora</description>
    <externalDeveloperName>Hora</externalDeveloperName>
    <label>Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>